POD fix for perlop
Commit 33be4c6111bea619c1662 added a line in pod/perlop.pod
for a new Non-capture mode modifier to qr//.
The 2nd paragraph below that line said:

  The last four modifiers listed above, added in Perl 5.14,
  control the character set rules, but C</a> is the only one
  you are likely to want to specify explicitly; the other three
  are selected automatically by various pragmas.

Since the "n" line was added, that paragraph no longer makes sense.  I
changed it to refer to the modifiers explicitly instead of the last four
lines. (An alternative would be to move the "n" line above the other
four.)

--- a/pod/perlop.pod
+++ b/pod/perlop.pod
@@ -1528,7 +1528,7 @@ of C<"msixpluadn"> will be propagated appropriately.  The effect that the
 C</o> modifier has is not propagated, being restricted to those patterns
 explicitly using it.
 
-The last four modifiers listed above, added in Perl 5.14,
+The C</a>, C</d>, C</l>, and C</u> modifiers (added in Perl 5.14)
 control the character set rules, but C</a> is the only one you are likely
 to want to specify explicitly; the other three are selected
 automatically by various pragmas.
