second arg to mkdir is MODE, not MASK
RT# 132505

Marco Fontani is now a Perl author.

--- a/AUTHORS
+++ b/AUTHORS
@@ -771,6 +771,7 @@ Marc Lehmann			<pcg@goof.com>
 Marc Paquette			<Marc.Paquette@Softimage.COM>
 Marc Simpson			<marc@0branch.com>
 Marcel Grünauer			<marcel@codewerk.com>
+Marco Fontani			<MFONTANI@cpan.org>
 Marco Peereboom			<marco@conformal.com>
 Marcus Holland-Moritz		<mhx-perl@gmx.net>
 Marek Rouchal			<marek.rouchal@infineon.com>
