perluniprops/mktables: Add code points matched annotations
This commit changes the generated perluniprops to include some or all of
the code points matched by binary tables.  All characters matched in the
00-FF range are listed, as well as the first few ranges beyond that.

This is to make this pod more useful for people using it as an index to
look things up.

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -173,7 +173,11 @@ section.
 
 Additionally, the following selected changes have been made:
 
-=head3 L<XXX>
+=head3 L<perluniprops>
+
+For each binary table or property, the documentation now includes which
+characters in the range C<\x00-\xFF> it matches, as well as a list of
+the first few ranges of code points matched above that.
 
 =over 4
 
